Repair overflow

--- a/assets/styles/admin/meeting.scss
+++ b/assets/styles/admin/meeting.scss
@@ -8,8 +8,9 @@
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
   background-color: rgba(0,0,0,0.4);
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .meeting-modal-content {
